# goit-pycore

./: README.md  addressbook.pkl  install-unix.sh  install-win.bat  license.txt  main.py  notebook.pkl  pyproject.toml  uninstall-unix.sh  uninstall-win.bat
assistant-bot/: main.py
assistant-bot/src/: constants.py
assistant-bot/src/contacts/: input_handle.py
assistant-bot/src/contacts/classes/: address_book.py  record.py
assistant-bot/src/contacts/classes/fields/: address.py  birthday.py  name.py  phone.py
assistant-bot/src/contacts/models/: record.py
assistant-bot/src/contacts/models/fields/: address.py  birthday.py  email.py  name.py  phone.py
assistant-bot/src/notes/: input_handle.py
assistant-bot/src/notes/classes/: note.py  notebook.py
assistant-bot/src/notes/models/: notebook.py
assistant-bot/src/utils/: parse_input.py  show_menu.py
assistant-bot/src/utils/models/: field.py
assistant_bot/: address_book.py  main.py
src/: constants.py  main.py
src/contacts/: input_handle.py
src/contacts/classes/: address_book.py  record.py
src/contacts/classes/fields/: birthday.py  email.py  phone.py
src/decorators/: input_error.py
src/notes/: input_handle.py
src/notes/classes/: note.py  notebook.py
src/utils/: create_path.py  parse_input.py  show_menu.py  suggest_command.py
src/utils/classes/: command_completer.py
