[tool.poetry]
name = "assistant-bot"
version = "1.0.0"
description = "A command-line assistant bot to manage contacts and notes."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "assistant_bot" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
assistant-bot = "assistant_bot.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"