[tool.poetry]
name = "assistant-bot"
version = "1.2.0"
description = "A command-line assistant bot to manage contacts and notes."
authors = ["CleverPath_team"]
packages = [
    { include = "src" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
prompt-toolkit = "^3.0.48"
colorama = "^0.4.6"

[tool.poetry.scripts]
assistant-bot = "src.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"